# Distill

./: CLAUDE.md  pyproject.toml
backend/: db.py  main.py
backend/api/: feed.py  items.py
backend/jobs/: discover.py  fetch.py  score.py
backend/models/: init_db.py  migrate.py  migrate_phase2.py  migrate_phase3.py
backend/services/: discovery.py  ollama.py  reddit.py  transcripts.py  youtube.py
config/: interest_profile.txt  settings.yaml  subreddits.yaml
docs/: initialspec.md  scripts.md
frontend/: index.html  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: App.tsx  api.ts  index.css  types.ts  utils.ts
frontend/src/components/: Btn.tsx  PostCard.tsx  VideoCard.tsx
frontend/src/pages/: Feed.tsx
scripts/: clear_scores.py  get_youtube_token.py  sync_youtube.py
